--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "html": "^1.0.0",
     "mongodb": "^4.12.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
