--- a/Expres/package.json
+++ b/Expres/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^4.16.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "ws": "^8.13.0"
   }
 }
