--- a/Expres/package.json
+++ b/Expres/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-redis-cache": "^1.1.3",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "html": "^1.0.0",
