--- a/Expres/package.json
+++ b/Expres/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.16.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "redis": "^4.6.7",
     "validator": "^13.7.0",
     "ws": "^8.13.0"
   }
