--- a/Expres/package.json
+++ b/Expres/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-redis-cache": "^1.1.3",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
